Задание. + Разработать тип, реализующий алгоритм Евклида для вычисления НОД двух целых чисел (http://en.wikipedia.org/wiki/Euclidean_algorithm). + Добавить к разработанному типу дополнительную функциональность в виде перегруженных методов вычисления НОД для трех, четырех или пяти целых чисел. + Добавить к разработанному типу метод, реализующий алгоритм Стейна (бинарный алгоритм Эвклида) для расчета НОД двух целых чисел (http://en.wikipedia.org/wiki/Binary_GCD_algorithm). Метод должен принимать выходной параметр, содержащий значение времени, затраченное для выполнения расчетов. + Изменить метод, реализующий алгоритм Евклида вычисления НОД двух параметров, добавив аналогичную функциональность. + Дополнить методом, подготавливающим данные для построения гистограммы, сравнивающей время нахождения решения каждым из методов. + Создать unit-тесты для тестирования разработанных методов. + Весь код должен быть снабжён комментариями (автокомментариями)

--- a/task01_NET/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
+++ b/task01_NET/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlgorithmGCD..cs" />
+    <Compile Include="DataForTheHistogram.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
