Unit tests and operator / fixed. Parameters names changed, added some comments and update gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+tests/Task01_Tests/DeclaringAndCallingMethodsTests/txt/out.txt
