Comments added. Fixed file names.

--- a/tests/Task02_Tests/OverloadOperationsTask2Tests/OverloadOperationsTask2Tests/OverloadOperationsTask2Tests.csproj
+++ b/tests/Task02_Tests/OverloadOperationsTask2Tests/OverloadOperationsTask2Tests/OverloadOperationsTask2Tests.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PolinomTests.cs" />
+    <Compile Include="PolynomialTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
