--- a/Task02.1_02.2/Task02.2/tests/OverloadOperationsTask2Tests/OverloadOperationsTask2Tests.csproj
+++ b/Task02.1_02.2/Task02.2/tests/OverloadOperationsTask2Tests/OverloadOperationsTask2Tests.csproj
@@ -47,15 +47,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MSTest.TestAdapter">
-      <Version>1.3.2</Version>
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestFramework">
-      <Version>1.3.2</Version>
+      <Version>2.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\src\Task02\OverloadOperationsTask2\OverloadOperationsTask2.csproj">
-      <Project>{018ade22-3339-4acc-b90a-f7c7c23740a5}</Project>
+    <ProjectReference Include="..\..\src\OverloadOperationsTask2\OverloadOperationsTask2.csproj">
+      <Project>{d6a3bb37-fcb9-4527-9645-8d305f7516ba}</Project>
       <Name>OverloadOperationsTask2</Name>
     </ProjectReference>
   </ItemGroup>
