--- a/Task03/src/InheritanceInterfacesAbstractAndClasses/InheritanceInterfacesAbstractAndClasses.csproj
+++ b/Task03/src/InheritanceInterfacesAbstractAndClasses/InheritanceInterfacesAbstractAndClasses.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoxForFigures.cs" />
+    <Compile Include="Figures\Circle.cs" />
     <Compile Include="Figures\Figure.cs" />
     <Compile Include="SetOfPaints.cs" />
     <Compile Include="Sheets\FilmSheet.cs" />
@@ -52,6 +53,13 @@
     <Compile Include="Sheets\Sheet.cs" />
     <Compile Include="Figures\Square.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Include="NUnit">
+      <Version>3.12.0</Version>
+    </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter">
+      <Version>3.15.1</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
