--- a/Task03/src/InheritanceInterfacesAbstractAndClasses/InheritanceInterfacesAbstractAndClasses.csproj
+++ b/Task03/src/InheritanceInterfacesAbstractAndClasses/InheritanceInterfacesAbstractAndClasses.csproj
@@ -42,12 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoxForFigures.cs" />
+    <Compile Include="Enum\Material.cs" />
     <Compile Include="Figures\Circle.cs" />
     <Compile Include="Figures\Figure.cs" />
-    <Compile Include="SetOfPaints.cs" />
-    <Compile Include="Sheets\FilmSheet.cs" />
+    <Compile Include="Interfaces\IMaterial.cs" />
+    <Compile Include="Enum\SetOfPaints.cs" />
     <Compile Include="Girl.cs" />
-    <Compile Include="Sheets\PaperSheet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Figures\Rectangle.cs" />
     <Compile Include="Sheets\Sheet.cs" />
