--- a/Task03/src/InheritanceInterfacesAbstractAndClasses/InheritanceInterfacesAbstractAndClasses.csproj
+++ b/Task03/src/InheritanceInterfacesAbstractAndClasses/InheritanceInterfacesAbstractAndClasses.csproj
@@ -41,17 +41,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoxForFigures.cs" />
+    <Compile Include="Box\BoxForFigures.cs" />
     <Compile Include="Enum\Material.cs" />
     <Compile Include="Figures\Circle.cs" />
     <Compile Include="Figures\Figure.cs" />
     <Compile Include="Interfaces\IMaterial.cs" />
-    <Compile Include="Enum\SetOfPaints.cs" />
-    <Compile Include="Girl.cs" />
+    <Compile Include="Enum\Color.cs" />
+    <Compile Include="IO\StreamIO.cs" />
+    <Compile Include="IO\XmlIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Figures\Rectangle.cs" />
     <Compile Include="Sheets\Sheet.cs" />
     <Compile Include="Figures\Square.cs" />
+    <Compile Include="IO\ConverterListToXmlIO.cs" />
+    <Compile Include="UserExceptions\ColorException.cs" />
+    <Compile Include="UserExceptions\CutException.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
@@ -61,5 +65,6 @@
       <Version>3.15.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
