--- a/Task03/tests/InheritanceInterfacesAbstractAndClassesTests/InheritanceInterfacesAbstractAndClassesTests.csproj
+++ b/Task03/tests/InheritanceInterfacesAbstractAndClassesTests/InheritanceInterfacesAbstractAndClassesTests.csproj
@@ -6,10 +6,14 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>c:\visual_studio\GitHub\.NET-GSTU-Autumn-2019-ForDim\Task03\tests\InheritanceInterfacesAbstractAndClassesTests\InheritanceInterfacesAbstractAndClassesTests.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
   <ItemGroup>
