--- a/Task04/src/ClientServerLib/ClientServerLib.csproj
+++ b/Task04/src/ClientServerLib/ClientServerLib.csproj
@@ -41,9 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
+    <Compile Include="Client\Client.cs" />
+    <Compile Include="StreamIO\NetworkStreamIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="Server\Server.cs" />
+    <Compile Include="Server\ServerClient.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
