--- a/Task04/src/ConsoleAppTcpClient/ConsoleAppTcpClient.csproj
+++ b/Task04/src/ConsoleAppTcpClient/ConsoleAppTcpClient.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4346D723-0BEF-45B1-A0CE-FEDECC5A6CF4}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClientServerLib</RootNamespace>
-    <AssemblyName>ClientServerLib</AssemblyName>
+    <ProjectGuid>{B61036CA-CB99-43FA-8022-3C5E71EC85A0}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>ConsoleAppTcpClient</RootNamespace>
+    <AssemblyName>ConsoleAppTcpClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,17 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\ClientModel\Client.cs" />
-    <Compile Include="MessagesFromServer.cs" />
-    <Compile Include="ServerAndClientEventArgs\NewMessageEventArgs.cs" />
-    <Compile Include="ServerAndClientEventArgs\NewMessageToClientEventArgs.cs" />
-    <Compile Include="MessagesFromCustomers.cs" />
-    <Compile Include="ServerAndClientEventArgs\NewMessageToServerEventArgs.cs" />
-    <Compile Include="StreamIO\NetworkStreamIO.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\ServerModel\Server.cs" />
-    <Compile Include="Model\ServerModel\ServerClient.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClientServerLib\ClientServerLib.csproj">
+      <Project>{4346d723-0bef-45b1-a0ce-fedecc5a6cf4}</Project>
+      <Name>ClientServerLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
