--- a/Task04/src/ClientServerLib/ClientServerLib.csproj
+++ b/Task04/src/ClientServerLib/ClientServerLib.csproj
@@ -17,10 +17,11 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>.\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\ClientServerLib.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -41,17 +42,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\ClientModel\Client.cs" />
-    <Compile Include="MessagesFromServer.cs" />
+    <Compile Include="Model\Client.cs" />
+    <Compile Include="Repositories\ServerMessageRepository.cs" />
     <Compile Include="ServerAndClientEventArgs\NewMessageEventArgs.cs" />
     <Compile Include="ServerAndClientEventArgs\NewMessageToClientEventArgs.cs" />
-    <Compile Include="MessagesFromCustomers.cs" />
+    <Compile Include="Repositories\ClientMessageRepository.cs" />
     <Compile Include="ServerAndClientEventArgs\NewMessageToServerEventArgs.cs" />
     <Compile Include="StreamIO\NetworkStreamIO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\ServerModel\Server.cs" />
-    <Compile Include="Model\ServerModel\ServerClient.cs" />
+    <Compile Include="Model\Server.cs" />
+    <Compile Include="Model\Conversation.cs" />
+    <Compile Include="UserExceptions\ConnectionError.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="ClientServerLib.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
