--- a/Task04/tests/ClientServerLibTests/ClientServerLibTests.csproj
+++ b/Task04/tests/ClientServerLibTests/ClientServerLibTests.csproj
@@ -6,6 +6,10 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>c:\visual_studio\GitHub\.NET-GSTU-Autumn-2019\Task04\tests\ClientServerLibTests\ClientServerLibTests.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
