--- a/Task05/src/BinaryTreeLib/BinaryTreeLib.csproj
+++ b/Task05/src/BinaryTreeLib/BinaryTreeLib.csproj
@@ -41,9 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Node.cs" />
+    <Compile Include="Core\Node.cs" />
+    <Compile Include="Model\Student.cs" />
+    <Compile Include="Model\StudentTestResult.cs" />
+    <Compile Include="Model\Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BinaryTree.cs" />
+    <Compile Include="Core\BinaryTree.cs" />
+    <Compile Include="Repositories\StudentTestResultRepository.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
