--- a/Task05/src/BinaryTreeLib/BinaryTreeLib.csproj
+++ b/Task05/src/BinaryTreeLib/BinaryTreeLib.csproj
@@ -45,9 +45,11 @@
     <Compile Include="Model\Student.cs" />
     <Compile Include="Model\StudentTestResult.cs" />
     <Compile Include="Model\Test.cs" />
+    <Compile Include="Enums\TestItems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\BinaryTree.cs" />
     <Compile Include="Repositories\StudentTestResultRepository.cs" />
+    <Compile Include="Serializer\Serialization.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
