--- a/Task05/src/BinaryTreeLib/BinaryTreeLib.csproj
+++ b/Task05/src/BinaryTreeLib/BinaryTreeLib.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Repositories\StudentTestResultRepository.cs" />
     <Compile Include="Serializer\Serialization.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="BinaryTreeLib.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
