--- a/Task06/src/DataBase/DataBase.csproj
+++ b/Task06/src/DataBase/DataBase.csproj
@@ -56,11 +56,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DatabaseServiceDataSet.Designer.cs">
+    <Compile Include="DataSets\DatabaseServiceDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DatabaseServiceDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Entities\SessionSchedule.cs" />
+    <Compile Include="Entities\Student.cs" />
+    <Compile Include="Entities\StudentSessionResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -76,8 +79,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>DatabaseService.mdf</DependentUpon>
     </Content>
-    <Content Include="DBSQLQuery\SqlQuereCreateDB.sql" />
-    <Content Include="DBSQLQuery\SQLQuery.sql" />
+    <Content Include="DBSQLQuery\SQLQueryCreateTable.sql" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -87,19 +89,16 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="DBSQLQuery\file1.ts" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="app.config" />
-    <None Include="DatabaseServiceDataSet.xsc">
+    <None Include="DataSets\DatabaseServiceDataSet.xsc">
       <DependentUpon>DatabaseServiceDataSet.xsd</DependentUpon>
     </None>
-    <None Include="DatabaseServiceDataSet.xsd">
+    <None Include="DataSets\DatabaseServiceDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>DatabaseServiceDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="DatabaseServiceDataSet.xss">
+    <None Include="DataSets\DatabaseServiceDataSet.xss">
       <DependentUpon>DatabaseServiceDataSet.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
@@ -107,5 +106,6 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
