--- a/Task06/src/DAO/DAO.csproj
+++ b/Task06/src/DAO/DAO.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9E653CE4-2CB4-4629-9A80-995B16E06360}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataBase</RootNamespace>
-    <AssemblyName>DataBase</AssemblyName>
+    <RootNamespace>DAO</RootNamespace>
+    <AssemblyName>DAO</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -47,6 +47,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -56,30 +57,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataSets\DatabaseServiceDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DatabaseServiceDataSet.xsd</DependentUpon>
-    </Compile>
+    <Compile Include="Helpers\ExtensionHelpers.cs" />
+    <Compile Include="Interfaces\IDataOperation.cs" />
     <Compile Include="Entities\SessionSchedule.cs" />
     <Compile Include="Entities\Student.cs" />
     <Compile Include="Entities\StudentSessionResults.cs" />
+    <Compile Include="Objects\BaseObject.cs" />
+    <Compile Include="Objects\StudentObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="DBServices\DatabaseService.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="DBServices\DatabaseService_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>DatabaseService.mdf</DependentUpon>
-    </Content>
-    <Content Include="DBSQLQuery\SQLQueryCreateTable.sql" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
@@ -90,17 +80,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="DataSets\DatabaseServiceDataSet.xsc">
-      <DependentUpon>DatabaseServiceDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="DataSets\DatabaseServiceDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DatabaseServiceDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataSets\DatabaseServiceDataSet.xss">
-      <DependentUpon>DatabaseServiceDataSet.xsd</DependentUpon>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
