--- a/Task06/src/DAO/DAO.csproj
+++ b/Task06/src/DAO/DAO.csproj
@@ -57,13 +57,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionObjects\SessionScheduleObject.cs" />
+    <Compile Include="Enums\DBAccessTechnologyEnum.cs" />
+    <Compile Include="Factories\DAOFactory.cs" />
+    <Compile Include="Factories\SqlClientUsingReflection.cs" />
     <Compile Include="Helpers\ExtensionHelpers.cs" />
-    <Compile Include="Interfaces\IDataOperation.cs" />
-    <Compile Include="Entities\SessionSchedule.cs" />
-    <Compile Include="Entities\Student.cs" />
-    <Compile Include="Entities\StudentSessionResults.cs" />
-    <Compile Include="Objects\BaseObject.cs" />
-    <Compile Include="Objects\StudentObject.cs" />
+    <Compile Include="Interfaces\ICRUD.cs" />
+    <Compile Include="Models\SessionSchedule.cs" />
+    <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\StudentSessionResults.cs" />
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionObjects\BaseObject.cs" />
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionObjects\StudentObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
