--- a/Task06/src/DAO/DAO.csproj
+++ b/Task06/src/DAO/DAO.csproj
@@ -57,17 +57,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionObjects\SessionScheduleObject.cs" />
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionRepository\ExamScheduleRepository.cs" />
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionRepository\GroupRepository.cs" />
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionRepository\SetOffScheduleRepository.cs" />
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionRepository\StudentRepository.cs" />
     <Compile Include="Enums\DBAccessTechnologyEnum.cs" />
     <Compile Include="Factories\DAOFactory.cs" />
     <Compile Include="Factories\SqlClientUsingReflection.cs" />
     <Compile Include="Helpers\ExtensionHelpers.cs" />
     <Compile Include="Interfaces\ICRUD.cs" />
-    <Compile Include="Models\SessionSchedule.cs" />
-    <Compile Include="Models\Student.cs" />
-    <Compile Include="Models\StudentSessionResults.cs" />
-    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionObjects\BaseObject.cs" />
-    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionObjects\StudentObject.cs" />
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionRepository\AbstractRepository.cs" />
+    <Compile Include="DBAccessTechnology\SqlClientUsingReflectionRepository\StudentSessionResultsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -89,6 +89,11 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DatabaseModels\DatabaseModels.csproj">
+      <Project>{83E7170B-12B1-4CB3-9E9A-A517B7188608}</Project>
+      <Name>DatabaseModels</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
