Implemented: Provide for saving the session results for each xlsx filetable group  For each session, display the xlsx pivot table with average / minimum / maximum score for each group  Create a list of students to be expelled, grouped  When generating reports, provide for the possibility of various sortings

--- a/Task06/src/DatabaseModels/DatabaseModels.csproj
+++ b/Task06/src/DatabaseModels/DatabaseModels.csproj
@@ -43,8 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IEntity.cs" />
+    <Compile Include="Models\NumberOfSession.cs" />
     <Compile Include="Models\Group.cs" />
-    <Compile Include="Models\SetOffSchedule.cs" />
     <Compile Include="Models\ExamSchedule.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\StudentSessionResults.cs" />
