--- a/Task06/src/SaveToXLSXManager/SaveToXLSXManager.csproj
+++ b/Task06/src/SaveToXLSXManager/SaveToXLSXManager.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2FC02C50-743A-4084-B344-ACBA7CE0CC58}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <ProjectGuid>{FDB28DF8-5F2A-40A6-B4D6-523F8E753A3A}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>SaveToXLSXManager</RootNamespace>
+    <AssemblyName>SaveToXLSXManager</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,24 +41,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Excel.cs" />
+    <Compile Include="ListToObjectQuere\Quere.cs" />
+    <Compile Include="Model\SessionTableExamResult.cs" />
+    <Compile Include="Model\SessionTableOfBothResult.cs" />
+    <Compile Include="Model\SessionTableResult.cs" />
+    <Compile Include="Model\SessionTableSetOffResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveToXLSX\SaveSessionResultsToXLSX.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\DAO\DAO.csproj">
+    <ProjectReference Include="..\DAO\DAO.csproj">
       <Project>{9E653CE4-2CB4-4629-9A80-995B16E06360}</Project>
       <Name>DAO</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\DatabaseModels\DatabaseModels.csproj">
-      <Project>{83e7170b-12b1-4cb3-9e9a-a517b7188608}</Project>
+    <ProjectReference Include="..\DatabaseModels\DatabaseModels.csproj">
+      <Project>{83E7170B-12B1-4CB3-9E9A-A517B7188608}</Project>
       <Name>DatabaseModels</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\SaveToXLSXManager\SaveToXLSXManager.csproj">
-      <Project>{FDB28DF8-5F2A-40A6-B4D6-523F8E753A3A}</Project>
-      <Name>SaveToXLSXManager</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -92,5 +89,6 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
