--- a/Task07/src/DBModelsLinqToSql/DBModelsLinqToSql.csproj
+++ b/Task07/src/DBModelsLinqToSql/DBModelsLinqToSql.csproj
@@ -32,13 +32,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Models\Specialties.cs" />
     <Compile Include="Interfaces\IEntity.cs" />
-    <Compile Include="Models\NumberOfSession.cs" />
-    <Compile Include="Models\Group.cs" />
-    <Compile Include="Models\ExamSchedule.cs" />
-    <Compile Include="Models\Student.cs" />
-    <Compile Include="Models\StudentSessionResults.cs" />
+    <Compile Include="Models\Sessions.cs" />
+    <Compile Include="Models\Groups.cs" />
+    <Compile Include="Models\ExamSchedules.cs" />
+    <Compile Include="Models\Students.cs" />
+    <Compile Include="Models\SessionsResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\Examiners.cs" />
+    <Compile Include="Models\Subjects.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Data.Linq" />
