--- a/Task07/src/DAO/DAO.csproj
+++ b/Task07/src/DAO/DAO.csproj
@@ -60,10 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBAccessTechnology\LINQtoSQLRepository\Repository.cs" />
-    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\StudentRepository.cs" />
+    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\StudentsRepository.cs" />
     <Compile Include="Enums\DBAccessTechnologyEnum.cs" />
     <Compile Include="Factories\DAOFactory.cs" />
-    <Compile Include="Factories\LinqToSql.cs" />
+    <Compile Include="Singelton\LinqToSqlSingelton.cs" />
     <Compile Include="Interfaces\ICRUD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -71,6 +71,13 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\ExaminersRepository.cs" />
+    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\ExamSchedulesRepository.cs" />
+    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\GroupsRepository.cs" />
+    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\SessionsRepository.cs" />
+    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\SessionsResultsRepository.cs" />
+    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\SpecialtiesRepository.cs" />
+    <Compile Include="DBAccessTechnology\LINQtoSQLRepository\SubjectsRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
