--- a/Task07/src/SaveToXLSXManager/ReportManager.csproj
+++ b/Task07/src/SaveToXLSXManager/ReportManager.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,16 +41,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Excel.cs" />
+    <Compile Include="GroupSessionsResultsReport.cs" />
+    <Compile Include="Interfaces\IReport.cs" />
     <Compile Include="ListToObjectQuere\Quere.cs" />
     <Compile Include="Model\SessionTableExamResult.cs" />
-    <Compile Include="Model\SessionTableOfBothResult.cs" />
+    <Compile Include="Model\GroupSessionsResultsRow.cs" />
     <Compile Include="Model\SessionTableResult.cs" />
     <Compile Include="Model\SessionTableSetOffResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveToXLSX\SaveSessionResultsToXLSX.cs" />
   </ItemGroup>
   <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>9</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
     <COMReference Include="VBIDE">
       <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
       <VersionMajor>5</VersionMajor>
@@ -62,6 +84,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="SaveToXLSXManager.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAO\DAO.csproj">
+      <Project>{9E653CE4-2CB4-4629-9A80-995B16E06360}</Project>
+      <Name>DAO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DBModelsLinqToSql\DBModelsLinqToSql.csproj">
+      <Project>{83E7170B-12B1-4CB3-9E9A-A517B7188608}</Project>
+      <Name>DBModelsLinqToSql</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
