fixed LinqToSqlSingelton.cs Added abstract class Report all other Report classes are inherited from him. Repositories are deleted because they are not needed due to the factoring pattern. Virtual keyword removed in Repository.cs

--- a/Task07/src/SaveToXLSXManager/ReportManager.csproj
+++ b/Task07/src/SaveToXLSXManager/ReportManager.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\DynamicsAverageSubjectScoreByYearsReportRow.cs" />
+    <Compile Include="Reports\Report.cs" />
     <Compile Include="Reports\DynamicsAverageSubjectScoreByYearsReport..cs" />
     <Compile Include="Reports\AverageScoreForEachExaminerReport.cs" />
     <Compile Include="Model\AverageScoreForEachExaminerReportRow.cs" />
