Added comments, xml-files.

--- a/Task07/src/DBModelsLinqToSql/DBModelsLinqToSql.csproj
+++ b/Task07/src/DBModelsLinqToSql/DBModelsLinqToSql.csproj
@@ -46,5 +46,8 @@
   <ItemGroup>
     <Reference Include="System.Data.Linq" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="DBModelsLinqToSql.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
